--- a/src/global.css
+++ b/src/global.css
@@ -22,7 +22,7 @@
   font-family: Presentation;
 }
 #root {
-  height: 100%;
+  height: 100svh;
   margin: 0 auto;
 }
 @media (max-width: 374px) {
@@ -33,5 +33,5 @@
 }
 @font-face {
   font-family: "Presentation";
-  src: url("../public/fonts/NotoSansKR-Medium.ttf") format("truetype");
+  src: url("../public/fonts/CookieRun Regular.ttf") format("truetype");
 }
